k8s/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-master
  namespace: jenkins
  labels:
    app: jenkins-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-master
  template:
    metadata:
      labels:
        app: jenkins-master
    spec:
      terminationGracePeriodSeconds: 10
      serviceAccountName: jenkins-account
      securityContext:
        fsGroup: 1000
      #imagePullSecrets:
      #  - name: p21d13401013001
      containers:
        - name: jenkins
          image: nabla/jenkins-pipeline-scripts:1.0.0
          imagePullPolicy: Always
          #imagePullPolicy: IfNotPresent
          ports:
            - name: http-port
              protocol: TCP
              containerPort: 80
              #targetPort: 9376
            - name: https-port
              protocol: TCP
              containerPort: 443
              #targetPort: 9377
            - name: liveness-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          readinessProbe:
            httpGet:
              path: /login
              port: 8080
              scheme: HTTPS
            initialDelaySeconds: 240 # 4 minutes to start
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 2
            failureThreshold: 5
          resources:
            limits:
              cpu: 2
              memory: 2Gi
            requests:
              cpu: 0.5
              memory: 1.3Gi
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
      restartPolicy: Always
      volumes:
        - name: jenkins-home
          emptyDir: {}
          #persistentVolumeClaim:
          #  claimName: pvc-jenkins-home
